objects/LLC_BI__ClosingDocument__c.object
<CustomObject>
    <description>The Closing Document Object is used to track details around documents required for closing that are stored in Document Manager.</description>
    <fields>
        <fullName>LLC_BI__Customer_Portal_Doc__c</fullName>
        <description>This field is not currently used.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Portal Doc</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan__c</fullName>
        <description>This field is not currently used.</description>
        <label>Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Closing Documents</relationshipLabel>
        <relationshipName>Closing_Documents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Owner__c</fullName>
        <description>This field is not currently used.</description>
        <label>ownerGroup</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Closer</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Attorney</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Loan Ops</fullName>
                </value>
                <value>
                    <fullName>Special Assets</fullName>
                </value>
                <value>
                    <fullName>Servicing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Portal_Doc_Name__c</fullName>
        <description>This field is not currently used.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Portal Doc Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Portal_Doc_Type__c</fullName>
        <description>This field is not currently used.</description>
        <label>Portal Doc Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>R</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>X</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Portal_Upload_Date__c</fullName>
        <description>This field is not currently used.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Portal Upload Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__approvalDate__c</fullName>
        <description>This field is not currently used.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LLC_BI__approvedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is not currently used.</description>
        <label>Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Closing_Documents1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__attachmentId__c</fullName>
        <description>This field is not currently used.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Current Attachment Id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__closingChecklist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is not currently used.</description>
        <label>Closing Checklist</label>
        <referenceTo>LLC_BI__ClosingChecklist__c</referenceTo>
        <relationshipLabel>Closing Documents</relationshipLabel>
        <relationshipName>Closing_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__comments__c</fullName>
        <description>This field is not currently used.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>comments</label>
        <length>12000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__date__c</fullName>
        <description>This field is not currently used.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__docClass__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is not currently used.</description>
        <label>DocClass</label>
        <referenceTo>LLC_BI__DocClass__c</referenceTo>
        <relationshipLabel>Closing Documents</relationshipLabel>
        <relationshipName>Closing_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__docManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is not currently used.</description>
        <label>DocManager</label>
        <referenceTo>LLC_BI__DocManager__c</referenceTo>
        <relationshipLabel>Closing Documents</relationshipLabel>
        <relationshipName>Closing_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__docTab__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is not currently used.</description>
        <label>DocTab</label>
        <referenceTo>LLC_BI__DocTab__c</referenceTo>
        <relationshipLabel>Closing Documents</relationshipLabel>
        <relationshipName>Closing_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__docType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is not currently used.</description>
        <label>DocType</label>
        <referenceTo>LLC_BI__DocType__c</referenceTo>
        <relationshipLabel>Closing Documents</relationshipLabel>
        <relationshipName>Closing_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__dueDaysPrior__c</fullName>
        <description>This field is not currently used.</description>
        <label>Due Days Prior</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__exceptionDate__c</fullName>
        <description>This field is not currently used.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Exception Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__fileSize__c</fullName>
        <description>This field is not currently used.</description>
        <label>File Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__firstReview__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is not currently used.</description>
        <label>First Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__helpText__c</fullName>
        <description>This field provides help text for the user and is optional.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Help Text</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LLC_BI__isDirectory__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is not currently used.</description>
        <label>Directory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__mimeType__c</fullName>
        <description>This field is not currently used.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Mime Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__ownerObjectId__c</fullName>
        <description>This field is not currently used.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>ownerObjectId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is not currently used.</description>
        <label>Parent</label>
        <referenceTo>LLC_BI__ClosingDocument__c</referenceTo>
        <relationshipLabel>Closing Documents</relationshipLabel>
        <relationshipName>children</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__priority__c</fullName>
        <description>This field is not currently used.</description>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__reviewDate__c</fullName>
        <description>This field is not currently used.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Review Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LLC_BI__reviewStatus__c</fullName>
        <description>This field is not currently used.</description>
        <label>Review Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Reviewed</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Exception</fullName>
                </value>
                <value>
                    <fullName>In-File</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__reviewedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is not currently used.</description>
        <label>Reviewed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Closing_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__sortOrder__c</fullName>
        <description>This field is not currently used.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Sort</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__version__c</fullName>
        <description>This field is not currently used.</description>
        <label>version</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Closing Document</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Closing Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>